// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders multiple rows 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  border: 1px solid rgba(255,255,255,0.18);
  border-radius: 4px;
}

.c2 {
  padding: 24px;
}

.c2:not(:last-child) {
  border-bottom: 1px solid rgba(255,255,255,0.18);
}

<div
  class="c0 c1"
>
  <div
    class="c0 c2"
  >
    Part 1
  </div>
  <div
    class="c0 c2"
  >
    Part 2
  </div>
  <div
    class="c0 c2"
  >
    Part 3
  </div>
</div>
`;

exports[`renders single row 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  border: 1px solid rgba(255,255,255,0.18);
  border-radius: 4px;
}

.c2 {
  padding: 24px;
}

.c2:not(:last-child) {
  border-bottom: 1px solid rgba(255,255,255,0.18);
}

<div
  class="c0 c1"
>
  <div
    class="c0 c2"
  >
    <div>
      Hello,
    </div>
    <div>
      World!
    </div>
  </div>
</div>
`;
